Removed #include from Queue.h

--- a/Queue/Queue/Queue.vcxproj
+++ b/Queue/Queue/Queue.vcxproj
@@ -79,6 +79,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Main.cpp" />
+    <ClCompile Include="..\..\Queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Queue.h" />
