--- a/Queue/Queue/Queue.vcxproj.filters
+++ b/Queue/Queue/Queue.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\..\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Queue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Queue.h">
